Second paragraph done by singapore

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<h1>Hello World</h1>
 		<p>This is my first html code practice</p>
+		<p>This is the second line of paragraph which is written by Singapore Server</p>
 	</body>
 </html>
 
