sign up page html code only for singapore

--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 		<title>My first code</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
-		<p>This is my first html code practice</p>
-		<p>This is the second line of paragraph which is written by Singapore Server</p>
+		<link rel="stylesheet" href="sunil12.css">
+<title>sign up page</title>
+</head>
+<body>
+<div id="container">
+<h3 id="s1">signup here</h3>
+<input type="text" name="name" id="sunil" placeholder="enter first name"><br>
+<br>
+<input type="text"name="name" id="sunil" placeholder="enter last name" /><br />
+<br>
+<input type="email" name="email" id="sunil" placeholder="enter email" /><br />
+<br>
+<input type="password"name="password" id="sunil" placeholder="enter password"><br>
+<br>
+<input type="password" name="password" id="sunil" placeholder="Re enter password"><br>
+<br>
+<div id="a">
+Enter Date Of Birth:<br>
+</div>
+<input type="text" name="DOB" id="sunil"placeholder="mm/dd/yyyy"><br>
+<br>
+<div id="b">
+Gender:<br>
+
+<br>
+<input type="radio"name="f1">Male
+<input type="radio" name="f1">Female
+<input type="radio" name="f1">Other
+<br>
+<input type="checkbox" name="sunil">I agree all the term & condition
+<br>
+<input type="submit" name="submit" id="sunil" value="submit here">
+</div>
+</div>
 	</body>
 </html>
+
 
